--- a/pred_random_forest.ipynb
+++ b/pred_random_forest.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "data = train_prep.copy()\n",
+    "rebalancing = False\n",
     "\n",
     "features = data.drop('type', axis=1)\n",
     "labels = data.type\n",
@@ -32,6 +33,38 @@
     "labels = label_encoder.transform(labels)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Possible Rebalancing with SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if rebalancing == True:\n",
+    "    from imblearn.over_sampling import SMOTE, ADASYN\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    def strat(data):\n",
+    "        b = Counter(data).values()\n",
+    "        a = Counter(data).keys()\n",
+    "        a = list(a)\n",
+    "        b = list(b)\n",
+    "\n",
+    "        for i in range(len(a)):\n",
+    "            if b[i] < 100 :\n",
+    "                b[i] = 100\n",
+    "        return dict(zip(a, b))\n",
+    "\n",
+    "    X_train, y_train = SMOTE(sampling_strategy=strat(y_train), random_state=1).fit_resample(X_train, y_train)\n"
    ]
   },
   {
@@ -60,7 +93,7 @@
    ],
    "source": [
     "rfc = RandomForestClassifier(n_estimators=2000, max_depth=100, max_features=None, random_state=0)\n",
-    "rfc.fit(features, labels)\n",
+    "rfc.fit(X_train, y_train)\n",
     "\n",
     "y_pred = rfc.predict(X_test)\n",
     "probs = rfc.predict_proba(X_test)\n",
@@ -183,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -197,12 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "7e5fc957e2145bdb6dcd6f004ae476467743f40bdc9351c87f25ceab537debc6"
    }
   }
  },
