--- a/pred_xgboost.ipynb
+++ b/pred_xgboost.ipynb
@@ -23,6 +23,7 @@
    "outputs": [],
    "source": [
     "data = train_prep.copy()\n",
+    "rebalancing = False\n",
     "\n",
     "features = data.drop('type', axis=1)\n",
     "labels = data.type\n",
@@ -34,6 +35,46 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# possible rebalancing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if rebalancing == True:\n",
+    "    from imblearn.over_sampling import SMOTE, ADASYN\n",
+    "    from collections import Counter\n",
+    "\n",
+    "    def strat(data):\n",
+    "        b = Counter(data).values()\n",
+    "        a = Counter(data).keys()\n",
+    "        a = list(a)\n",
+    "        b = list(b)\n",
+    "\n",
+    "        for i in range(len(a)):\n",
+    "            if b[i] < 100 :\n",
+    "                b[i] = 100\n",
+    "        return dict(zip(a, b))\n",
+    "\n",
+    "    X_train, y_train = SMOTE(sampling_strategy=strat(y_train), random_state=1).fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -41,7 +82,7 @@
    "source": [
     "bst = XGBClassifier(random_state=0)\n",
     "# fit model\n",
-    "bst.fit(features, labels)\n",
+    "bst.fit(X_train, y_train)\n",
     "# make predictions\n",
     "preds = bst.predict(X_test)\n",
     "val_acc = accuracy_score(y_test, preds)\n",
@@ -80,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -94,12 +135,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "7e5fc957e2145bdb6dcd6f004ae476467743f40bdc9351c87f25ceab537debc6"
    }
   }
  },
