--- a/adding_and_deleting_columns.ipynb
+++ b/adding_and_deleting_columns.ipynb
@@ -840,7 +840,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('data science': venv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -854,11 +854,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f26856bb7eff3868cea7198e8b81762dc8127b6e1d735fb9fd248b964f39d85f"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
