--- a/pred_nlp.ipynb
+++ b/pred_nlp.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,32 +265,125 @@
     "label_encoder = LabelEncoder()\n",
     "label_encoder = label_encoder.fit(labels)\n",
     "labels = label_encoder.transform(labels)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.1, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7760765550239235"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bst = XGBClassifier(random_state=0)\n",
-    "bst.fit(X_train, y_train)"
+    "bst.fit(X_train, y_train)\n",
+    "y_pred = bst.predict(X_test)\n",
+    "accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         7\n",
+      "           1       0.97      0.97      0.97       235\n",
+      "           2       0.00      0.00      0.00        20\n",
+      "           3       0.00      0.00      0.00         3\n",
+      "           4       0.75      0.70      0.72       143\n",
+      "           5       0.00      0.00      0.00        17\n",
+      "           6       0.00      0.00      0.00        13\n",
+      "           7       0.00      0.00      0.00         3\n",
+      "           8       1.00      0.94      0.97        50\n",
+      "           9       0.00      0.00      0.00         6\n",
+      "          10       0.00      0.00      0.00         7\n",
+      "          11       0.97      0.94      0.96       229\n",
+      "          12       1.00      0.87      0.93        52\n",
+      "          13       0.00      0.00      0.00         5\n",
+      "          14       1.00      0.11      0.20        73\n",
+      "          15       0.00      0.00      0.00         4\n",
+      "          16       1.00      0.06      0.12        16\n",
+      "          17       0.00      0.00      0.00         2\n",
+      "          18       0.69      0.41      0.52        61\n",
+      "          19       0.67      0.22      0.33        18\n",
+      "          20       1.00      0.12      0.22         8\n",
+      "          21       0.00      0.00      0.00         9\n",
+      "          22       0.82      0.86      0.84       140\n",
+      "          23       0.00      0.00      0.00        11\n",
+      "          24       0.00      0.00      0.00         2\n",
+      "          25       0.93      0.45      0.61        31\n",
+      "          26       0.65      0.46      0.54       134\n",
+      "          27       0.75      0.19      0.30        16\n",
+      "          28       1.00      0.25      0.40         4\n",
+      "          29       1.00      0.23      0.37        35\n",
+      "          30       0.91      0.48      0.63        67\n",
+      "          31       0.00      0.00      0.00         4\n",
+      "          32       0.00      0.00      0.00        16\n",
+      "          33       1.00      0.20      0.33         5\n",
+      "          34       0.00      0.00      0.00         5\n",
+      "          35       1.00      0.17      0.29         6\n",
+      "          36       0.51      0.95      0.67       628\n",
+      "          37       0.74      0.80      0.77       418\n",
+      "          38       0.00      0.00      0.00        16\n",
+      "          39       0.00      0.00      0.00        14\n",
+      "          40       1.00      0.50      0.67         2\n",
+      "          41       0.81      0.81      0.81       169\n",
+      "          42       0.94      0.32      0.48        47\n",
+      "          43       0.91      0.82      0.87       188\n",
+      "          44       0.00      0.00      0.00         6\n",
+      "          45       0.89      0.89      0.89        55\n",
+      "          46       0.00      0.00      0.00         6\n",
+      "          47       0.00      0.00      0.00         4\n",
+      "          48       1.00      0.93      0.97        60\n",
+      "          49       0.00      0.00      0.00         5\n",
+      "          50       1.00      0.33      0.50         9\n",
+      "          51       1.00      0.12      0.21        26\n",
+      "          52       0.00      0.00      0.00         5\n",
+      "          53       0.00      0.00      0.00         3\n",
+      "          54       1.00      0.35      0.52        17\n",
+      "\n",
+      "    accuracy                           0.73      3135\n",
+      "   macro avg       0.49      0.28      0.32      3135\n",
+      "weighted avg       0.74      0.73      0.69      3135\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "clf = RandomForestClassifier(n_estimators=1000)\n",
     "clf.fit(X_train, y_train)\n",
     "preds = clf.predict(X_test)\n",
     "\n",
     "report = classification_report(y_test, preds)\n",
-    "print(report)\n",
-    "clf.save_model('models/curie_model.json')"
+    "print(report)"
    ]
   }
  ],
@@ -310,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
