--- a/pred_voter.ipynb
+++ b/pred_voter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "type_indicators = {}\n",
-    "with open('data/type_ind_cut.txt', 'r') as f:\n",
+    "with open('data/type_indicators/type_ind_cut.txt', 'r') as f:\n",
     "    for line in f:\n",
     "        a = line.split('\\'')\n",
     "        type = a[1]\n",
     "        indicators = a[2].split()\n",
     "        type_indicators[type] = indicators\n",
     "save_indicators = {}\n",
-    "with open('data/save_indicator.txt', 'r') as f:\n",
+    "with open('data/type_indicators/save_indicator.txt', 'r') as f:\n",
     "    for line in f:\n",
     "        a = line.split('\\'')\n",
     "        type = a[1]\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# is the full ds used for submission?\n",
-    "full = True\n",
+    "full = False\n",
     "# submit to \n",
     "sub_name = 'class_adding_best_kaggle.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,23 +122,20 @@
     "#define models to be used for testing use 03 for submission use full\n",
     "import pickle\n",
     "xgb = XGBClassifier()\n",
-    "# 'models/xg/xgboost_full.json' 'models/xg/xgboost_03.json' 'models/xg/full_smote100.json' 'models/xg/03_smote100.json'\n",
-    "xgb.load_model('models/xg/full_smote100.json')\n",
+    "xgb.load_model('models/xg/03_smote100.json')\n",
     "\n",
-    "# './models/rf/train_prep_03' './models/rf/train_prep_full' './models/rf/train_prep_03_best' './models/rf/train_prep_full_best' './models/rf/smote_full_best' './models/rf/smote_03_best\n",
     "rf = pickle.load(open('./models/rf/train_prep_full_best' , 'rb'))\n",
     "\n",
     "boost_emb = XGBClassifier()\n",
-    "# 'models/nlp/xgboost_full.json' 'models/nlp/xgboost_03.json'\n",
-    "boost_emb.load_model('models/nlp/xgboost_full.json')\n",
+    "boost_emb.load_model('models/nlp/xgboost_03.json')\n",
     "\n",
     "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/first_try.zip')"
+    "nn.load_model('models/nn/tabnet_03.zip')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,19 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27626/1817881700.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7202/1817881700.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  results['xg'].iloc[i] = np.array(item)\n",
-      "/tmp/ipykernel_27626/1817881700.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7202/1817881700.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -213,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,9 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfrom statistics import mode\\ndef vote(predictions):\\n    if predictions[0] != -1:\\n        return predictions[0]\\n    if -1 in predictions: predictions.remove(-1)\\n    return mode(predictions)\\n\\nresults['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb]), axis=1)\\n\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# from previous approach for hard voting on predicted classes\n",
     "\"\"\"\n",
@@ -287,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,12 +312,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9783333333333334\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.92      0.96        13\n",
+      "           1       1.00      1.00      1.00       240\n",
+      "           2       1.00      1.00      1.00        20\n",
+      "           3       1.00      1.00      1.00         1\n",
+      "           4       0.98      0.99      0.99       162\n",
+      "           5       1.00      1.00      1.00        11\n",
+      "           6       1.00      0.94      0.97        17\n",
+      "           7       1.00      1.00      1.00         2\n",
+      "           8       1.00      1.00      1.00        52\n",
+      "           9       1.00      0.86      0.92         7\n",
+      "          10       1.00      1.00      1.00         3\n",
+      "          11       1.00      0.98      0.99       270\n",
+      "          12       1.00      1.00      1.00        57\n",
+      "          13       1.00      1.00      1.00        12\n",
+      "          14       0.95      0.89      0.92       125\n",
+      "          15       1.00      1.00      1.00         3\n",
+      "          16       1.00      0.95      0.97        20\n",
+      "          17       0.60      1.00      0.75         3\n",
+      "          18       0.97      1.00      0.98        62\n",
+      "          19       0.77      0.77      0.77        30\n",
+      "          20       1.00      1.00      1.00         6\n",
+      "          21       1.00      1.00      1.00        10\n",
+      "          22       0.91      0.93      0.92       197\n",
+      "          23       1.00      0.80      0.89        10\n",
+      "          24       1.00      0.83      0.91         6\n",
+      "          25       0.97      0.94      0.95        33\n",
+      "          26       0.98      0.98      0.98       163\n",
+      "          27       1.00      1.00      1.00        22\n",
+      "          28       1.00      1.00      1.00         4\n",
+      "          29       1.00      1.00      1.00        30\n",
+      "          30       1.00      1.00      1.00        61\n",
+      "          31       1.00      1.00      1.00         8\n",
+      "          32       0.86      0.91      0.89        34\n",
+      "          33       1.00      1.00      1.00         5\n",
+      "          34       1.00      0.50      0.67         2\n",
+      "          35       1.00      0.80      0.89         5\n",
+      "          36       0.98      1.00      0.99      1067\n",
+      "          37       0.99      1.00      0.99       685\n",
+      "          38       1.00      0.88      0.93        16\n",
+      "          39       1.00      1.00      1.00         9\n",
+      "          40       0.00      0.00      0.00         5\n",
+      "          41       0.95      0.98      0.97       213\n",
+      "          42       0.97      0.75      0.85        48\n",
+      "          43       1.00      1.00      1.00       237\n",
+      "          44       1.00      1.00      1.00         6\n",
+      "          45       1.00      1.00      1.00        48\n",
+      "          46       1.00      0.67      0.80         6\n",
+      "          47       1.00      1.00      1.00        10\n",
+      "          48       1.00      1.00      1.00        63\n",
+      "          49       1.00      1.00      1.00         3\n",
+      "          50       1.00      1.00      1.00        19\n",
+      "          51       1.00      0.96      0.98        27\n",
+      "          52       1.00      1.00      1.00         5\n",
+      "          53       1.00      1.00      1.00         3\n",
+      "          54       0.81      0.92      0.86        24\n",
+      "\n",
+      "    accuracy                           0.98      4200\n",
+      "   macro avg       0.96      0.93      0.94      4200\n",
+      "weighted avg       0.98      0.98      0.98      4200\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "results['prediction'] = results.apply(lambda row: vote([row.xg,row.emb]), axis=1)\n",
-    "if not full: print(accuracy_score(results.type, results.prediction))"
+    "if not full:\n",
+    "    print(accuracy_score(results.type, results.prediction))\n",
+    "    print(classification_report(results.type, results.prediction))"
    ]
   },
   {
@@ -321,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
